fix post de partido
